<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nitro Settings</string>

    <string name="category_usb_title">USB</string>
    <string name="fastcharge_title_head">Fast Charge</string>
    <string name="fastcharge_summary_head">Enable to draw more power when connected to a PC USB port (750mA)</string>

    <string name="category_backlightdisable_title">Backlight</string>
    <string name="backlightdisable_title_head">Disable Button Backlight</string>
    <string name="backlightdisable_summary_head">Select to disable the capacitive button backlight</string>

    <string name="category_vibrator_intensity_title">Vibrator</string>
    <string name="vibrator_intensity_title_head">Vibrator Power Control</string>
    <string name="vibrator_intensity_summary_head">Select of powerfull haptic feedback or disable</string>

    <string name="category_sdcard_cache_title">SDCard</string>
    <string name="sdcard_cache_title_head">SDCard Cache size</string>
    <string name="sdcard_cache_summary_head">Select SDCard Cache size for better speed r/w.</string>

    <string name="category_wifi_pm_title">WiFi</string>
    <string name="wifi_pm_title_head">WiFi Control</string>
    <string name="wifi_pm_summary_head">Select mode WIFI_FAST</string>

    <string name="category_linux_cache_title">Linux Page Cache</string>
    <string name="category_linux_cache_summary_none">Theory of Operation and Tuning for Write-Heavy Loads</string>
    <string name="dw_centisecs_title_head">dirty_writeback_centisecs</string>
    <string name="dw_centisecs_summary_head">In hundredths of a second, this is how often pdflush wakes up to write data to disk</string>
    <string name="de_centisecs_title_head">dirty_expire_centiseconds</string>
    <string name="de_centisecs_summary_head">In hundredths of a second, how long data can be in the page cache before it\'s considered expired and must be written at the next opportunity</string>
    <string name="db_ratio_title_head">dirty_background_ratio</string>
    <string name="db_ratio_summary_head">Maximum percentage of active that can be filled with dirty pages before pdflush begins to write them</string>
    <string name="d_ratio_title_head">dirty_ratio</string>
    <string name="d_ratio_summary_head">Maximum percentage of total memory that can be filled with dirty pages before processes are forced to write dirty buffers themselves during their time slice instead of being allowed to do more writes</string>
    <string name="vfs_cache_pressure_title_head">vfs_cache_pressure</string>
    <string name="vfs_cache_pressure_summary_head">Controls the tendency of the kernel to reclaim the memory which is used for caching of directory and inode objects</string>

</resources>
